test/fixtures/fixtures/type-error/global-assignment.lys.ast.desugar
|-Document(0,50)
  |-VarDirective(0,9)
    |-VarDeclaration(0,9)
      |-NameIdentifier(4,5)
        |-Identifier=x
      |-NumberLiteral=1
  |-FunctionDirective(11,50)
    |-Decorators(11,11)
      <Rule0>
    |-FunDeclaration(11,50)
      |-NameIdentifier(15,21)
        |-Identifier=addOne
      |-TypeParameters(21,21)
        <Rule0>
      |-FunctionParamsList(21,23)
        |-(List)(22,22)
          <Rule0>
      |-ReturnType(23,29)
        |-Reference(25,28)
          |-QName(25,28)
            |-NameIdentifier(25,28)
              |-Identifier=i32
      |-FunctionBody(29,50)
        |-CodeBlock(31,50)
          |-BinaryOpExpression(35,48)
            |-Reference(35,36)
              |-QName(35,36)
                |-NameIdentifier(35,36)
                  |-Identifier=x
            |-Operator==
            |-BinaryOpExpression(39,48)
              |-Reference(39,40)
                |-QName(39,40)
                  |-NameIdentifier(39,40)
                    |-Identifier=x
              |-Operator=+
              |-BooleanLiteral(43,48)
                <Rule0>
  |-EndOfFile=